fix(fe): overflow issues

--- a/fe/src/style.css
+++ b/fe/src/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 :root {
   font-family: 'Source Code Pro', 'SF Mono', 'Consolas', monospace;
 }
@@ -25,6 +29,7 @@ body {
   left: 0;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
 }
 
 #connectui {
@@ -87,7 +92,7 @@ body {
 
 .hud-nametag {
   font-size: 1rem;
-  font-weight: 600; 
+  font-weight: 600;
   text-align: center;
 }
 
@@ -103,7 +108,7 @@ body {
 
 .hud-gridevent {
   font-size: 2rem;
-  font-weight: 600; 
+  font-weight: 600;
   text-align: center;
   color: white;
   text-shadow: 0px 0px 5px #000000;
@@ -121,7 +126,7 @@ body {
 
 .hud-gridevent-annihilate {
   font-size: 1rem;
-  font-weight: 400; 
+  font-weight: 400;
   color: #ff8000;
   text-shadow: 0px -1px 10px #ff0000, 0px 2px 5px #000000;
 }
